test/async/neg/stark_naked_await.check
stark_naked_await.scala:6: error: await must not be used in this position
    await(Future(4))
    ^
one error found
